# mcp-daktela

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: api-reference.md
scripts/: bench_cache.py  integration_test.py  run_bench.sh
src/mcp_daktela/: __main__.py  auth.py  cache.py  client.py  config.py  filters.py  formatting.py  logging_middleware.py  oauth.py  scorer.py  server.py
tests/: conftest.py  test_auth.py  test_cache.py  test_client.py  test_config.py  test_filters.py  test_formatting.py  test_logging_middleware.py  test_oauth.py  test_scorer.py  test_server.py
